salesforce/force-app/main/default/objects/Opportunity/fields/ACV_Products_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>ACV_Products_Mismatch__c</fullName>
    <description>Warning indicator when Products total does not match ACV. Empty when aligned or no products.</description>
    <formula>IF(
    Amount &gt; 0 &amp;&amp; ACV__c &gt; 0 &amp;&amp; Amount != ACV__c,
    "⚠️ Products ($" &amp; TEXT(ROUND(Amount/1000, 0)) &amp; "K) ≠ ACV ($" &amp; TEXT(ROUND(ACV__c/1000, 0)) &amp; "K)",
    IF(
        Amount &gt; 0 &amp;&amp; Amount = ACV__c,
        "✓ Aligned",
        ""
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV / Products Status</label>
    <type>Text</type>
</CustomField>