salesforce/force-app/main/default/objects/Opportunity/fields/AI_Enabled_ACV__c.field-meta.xml
<CustomField>
    <fullName>AI_Enabled_ACV__c</fullName>
    <description>Returns ACV if Product Bucket is AI-Enabled Services, otherwise 0. Use for summing AI-Enabled revenue in reports.</description>
    <formula>IF(Eudia_Tech__c, ACV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI-Enabled ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>