salesforce/force-app/main/default/objects/Opportunity/fields/AI_Enabled_Quarterly_Forecast_Net__c.field-meta.xml
<CustomField>
    <fullName>AI_Enabled_Quarterly_Forecast_Net__c</fullName>
    <description>Returns BL Quarterly Forecast for AI-Enabled opps. For Renewals, returns Renewal Net Change instead. Use for summing AI-Enabled forecast in reports.</description>
    <formula>IF(Eudia_Tech__c,
  IF(ISPICKVAL(Sales_Type__c, "Renewal"), Renewal_Net_Change__c, BL_Quarterly_Forecast__c),
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI-Enabled Quarterly Forecast Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>