salesforce/force-app/main/default/objects/Opportunity/fields/BL_Commit_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>BL_Commit_Snapshot__c</fullName>
    <description>Owner's total quarterly commit amount frozen at quarter start. Stamped by the commit snapshot Apex script. Shows the BL's total committed pipeline at the time of snapshot.</description>
    <inlineHelpText>Your BL's total committed ACV at quarter start (frozen value).</inlineHelpText>
    <label>BL Commit Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>