salesforce/force-app/main/default/objects/Opportunity/fields/BL_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>BL_Forecast_Category__c</fullName>
    <description>Weekly forecast category set by the Business Lead. Drives the BL Quarterly Forecast calculation.</description>
    <inlineHelpText>Updated weekly. Default is Pipeline (0%). Use Gut (60%) for higher confidence deals, or Commit (100%) for quarterly commit deals. This drives the BL Quarterly Forecast value.</inlineHelpText>
    <label>BL Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Gut</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>