salesforce/force-app/main/default/objects/Opportunity/fields/BL_Quarterly_Commit__c.field-meta.xml
<CustomField>
    <fullName>BL_Quarterly_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate this is a priority deal expected to close this quarter. Populated at the start of each quarter by the Business Lead.</description>
    <inlineHelpText>Populated at the start of the quarter, tagging priority deals. Provides estimated total expected to close per BL.</inlineHelpText>
    <label>BL Quarterly Commit</label>
    <type>Checkbox</type>
</CustomField>