salesforce/force-app/main/default/objects/Opportunity/fields/BL_Quarterly_Forecast__c.field-meta.xml
<CustomField>
    <fullName>BL_Quarterly_Forecast__c</fullName>
    <description>Calculated forecast amount based on ACV and BL Forecast Category weighting.</description>
    <inlineHelpText>Auto-calculated: ACV × Forecast Category weight. Pipeline = 0%, Gut = 60%, Commit = 100%.</inlineHelpText>
    <label>BL Quarterly Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>