salesforce/force-app/main/default/objects/Opportunity/fields/Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Code_Name__c</fullName>
    <description>Anonymized identifier for Council opportunities. Automatically synced from the parent Account's Code Name via Flow when Eudia_Council_Op__c is checked.</description>
    <inlineHelpText>This field is automatically populated from the Account's Code Name when marked as a Council opportunity.</inlineHelpText>
    <label>Code Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>