salesforce/force-app/main/default/objects/Opportunity/fields/CS_Staffing__c.field-meta.xml
<CustomField>
    <fullName>CS_Staffing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that CS team has been alerted about this opportunity reaching Stage 4 or 5. Set automatically by Flow when deal enters Proposal or Negotiation stage. Only triggers once per opportunity.</description>
    <inlineHelpText>Auto-set when deal reaches Stage 4 (Proposal) or Stage 5 (Negotiation). Triggers CS staffing notification.</inlineHelpText>
    <label>CS Staffing Alert Sent</label>
    <type>Checkbox</type>
</CustomField>