salesforce/force-app/main/default/objects/Opportunity/fields/Deliveries_Summary__c.field-meta.xml
<CustomField>
    <fullName>Deliveries_Summary__c</fullName>
    <description>Summary of all Delivery records linked to this Opportunity. Auto-populated when Deliveries are created.</description>
    <label>Deliveries</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>