salesforce/force-app/main/default/objects/Opportunity/fields/Delivery_Links__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Links__c</fullName>
    <description>Clickable links to all Delivery records associated with this Opportunity. Auto-populated when Deliveries are created.</description>
    <label>Delivery Links</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>