salesforce/force-app/main/default/objects/Opportunity/fields/Eudia_Council_Op__c.field-meta.xml
<CustomField>
    <fullName>Eudia_Council_Op__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating this is a Council opportunity under attorney-client privilege. When checked, the opportunity will be anonymized using the Code Name for restricted users.</description>
    <inlineHelpText>Check this box to mark this opportunity as a Council engagement. This will anonymize the opportunity for non-leadership users.</inlineHelpText>
    <label>Eudia Council Opportunity</label>
    <type>Checkbox</type>
</CustomField>