salesforce/force-app/main/default/objects/Opportunity/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <description>Date when the first outreach was made to the contact that led to this opportunity.</description>
    <inlineHelpText>When was the first outreach made?</inlineHelpText>
    <label>First Contact Date</label>
    <type>Date</type>
</CustomField>