salesforce/force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Detailed information about the lead source, such as specific campaign, sequence, or event name.</description>
    <inlineHelpText>Specific campaign, sequence, or event that generated this opportunity.</inlineHelpText>
    <label>Lead Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>