salesforce/force-app/main/default/objects/Opportunity/fields/Legacy_Services_ACV__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Services_ACV__c</fullName>
    <description>Returns ACV if Product Bucket is Legacy Services, otherwise 0. Use for summing Legacy Services revenue in reports.</description>
    <formula>IF(Product_Bucket__c = "Legacy Services", ACV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Services ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>