salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Champion__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Champion__c</fullName>
    <description>[C] Who is our internal advocate? Name, title, and how they are helping us win.</description>
    <label>Champion (C)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>