salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Competition__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Competition__c</fullName>
    <description>[C] Who are we competing against? Other vendors, DIY solutions, or status quo.</description>
    <label>Competition (C)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>