salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Decision_Criteria__c</fullName>
    <description>[D] What are their key requirements for selecting a solution? Technical, business, and compliance criteria.</description>
    <label>Decision Criteria (D)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>