salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Decision_Process__c</fullName>
    <description>[D] What are the steps to get a deal signed? Timeline, approvals, procurement process.</description>
    <label>Decision Process (D)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>