salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Economic_Buyer__c</fullName>
    <description>[E] Who has budget authority? Name, title, and relationship status.</description>
    <label>Economic Buyer (E)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>