salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Identify_Pain__c</fullName>
    <description>[I] What problems are they trying to solve? Current pain points and business impact of not solving them.</description>
    <label>Identify Pain (I)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>