salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Metrics__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Metrics__c</fullName>
    <description>[M] Quantifiable business impact and ROI. What metrics will improve? How much value does the solution deliver?</description>
    <label>Metrics (M)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>