salesforce/force-app/main/default/objects/Opportunity/fields/MEDDICC_Qualification__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Qualification__c</fullName>
    <description>MEDDICC qualification framework for opportunity assessment. Sales reps should complete this by Stage 2.</description>
    <inlineHelpText>Document your MEDDICC qualification details. Complete this by Stage 2.</inlineHelpText>
    <label>MEDDICC Qualification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>