salesforce/force-app/main/default/objects/Opportunity/fields/Opportunity_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Display_Name__c</fullName>
    <description>Shows the Code Name for Council opportunities, otherwise shows the Account Name. Use this field for display purposes to ensure Council opportunities are properly anonymized.</description>
    <formula>IF(Eudia_Council_Op__c, Code_Name__c, Account.Name)</formula>
    <inlineHelpText>Displays the anonymized code name for Council opportunities, or the account name for standard opportunities.</inlineHelpText>
    <label>Opportunity Display Name</label>
    <type>Text</type>
</CustomField>