salesforce/force-app/main/default/objects/Opportunity/fields/Original_Outreach_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Outreach_Source__c</fullName>
    <description>The original outreach channel that led to this opportunity.</description>
    <inlineHelpText>How was the initial contact made that led to this opportunity?</inlineHelpText>
    <label>Original Outreach Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Sales Navigator</fullName>
            </value>
            <value>
                <fullName>Manual Email</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>