salesforce/force-app/main/default/objects/Opportunity/fields/Primary_Influencing_Event__c.field-meta.xml
<CustomField>
    <fullName>Primary_Influencing_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event campaign that activated or influenced this opportunity. Supports event activation attribution where the original source may be Referral but the event is what converted the referral into pipeline.</description>
    <label>Primary Influencing Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Influenced Opportunities</relationshipLabel>
    <relationshipName>Influenced_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>