salesforce/force-app/main/default/objects/Opportunity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Primary product line for this opportunity.</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            
            <!-- ═══════════════════════════════════════════════════════════ -->
            <!-- NEW VALUES (ACTIVE) - Regular hyphens in API name -->
            <!-- ═══════════════════════════════════════════════════════════ -->
            
            <!-- CONTRACTING -->
            <value>
                <fullName>AI Contracting - Technology</fullName>
            </value>
            <value>
                <fullName>AI Contracting - Managed Services</fullName>
            </value>
            <value>
                <fullName>Contracting - Secondee</fullName>
            </value>
            
            <!-- COMPLIANCE -->
            <value>
                <fullName>AI Compliance - Technology</fullName>
            </value>
            
            <!-- M&A -->
            <value>
                <fullName>AI M&amp;A - Managed Services</fullName>
            </value>
            
            <!-- AI PLATFORM -->
            <value>
                <fullName>AI Platform - Sigma</fullName>
            </value>
            <value>
                <fullName>AI Platform - Insights</fullName>
            </value>
            <value>
                <fullName>AI Platform - Litigation</fullName>
            </value>
            <value>
                <fullName>AI Platform - Government</fullName>
            </value>

            <!-- FDE -->
            <value>
                <fullName>FDE - Custom AI Solution</fullName>
            </value>
            
            <!-- OTHER -->
            <value>
                <fullName>Other - Managed Service</fullName>
            </value>
            <value>
                <fullName>Other - Secondee</fullName>
            </value>
            
            <!-- FLAGS -->
            <value>
                <fullName>Undetermined</fullName>
            </value>
            
            <!-- ═══════════════════════════════════════════════════════════ -->
            <!-- LEGACY VALUES (INACTIVE) - Hidden from dropdown -->
            <!-- ═══════════════════════════════════════════════════════════ -->
            
            <value>
                <fullName>AI-Augmented Contracting - In-House Technology</fullName>
                <isActive>false</isActive>
                <label>AI-Augmented Contracting - In-House Technology</label>
            </value>
            <value>
                <fullName>AI-Augmented Contracting - Managed Services</fullName>
                <isActive>false</isActive>
                <label>AI-Augmented Contracting - Managed Services</label>
            </value>
            <value>
                <fullName>AI-Augmented Compliance - In-House Technology</fullName>
                <isActive>false</isActive>
                <label>AI-Augmented Compliance - In-House Technology</label>
            </value>
            <value>
                <fullName>AI-Augmented M&amp;A - In-House Technology</fullName>
                <isActive>false</isActive>
                <label>AI-Augmented M&amp;A - In-House Technology</label>
            </value>
            <value>
                <fullName>AI-Augmented M&amp;A - Managed Service</fullName>
                <isActive>false</isActive>
                <label>AI-Augmented M&amp;A - Managed Service</label>
            </value>
            <value>
                <fullName>Sigma</fullName>
                <isActive>false</isActive>
                <label>Sigma</label>
            </value>
            <value>
                <fullName>Litigation</fullName>
                <isActive>false</isActive>
                <label>Litigation</label>
            </value>
            <value>
                <fullName>Custom Agents</fullName>
                <isActive>false</isActive>
                <label>Custom Agents</label>
            </value>
            <value>
                <fullName>Multiple</fullName>
                <isActive>false</isActive>
                <label>Multiple</label>
            </value>
            
        </valueSetDefinition>
    </valueSet>
</CustomField>