salesforce/force-app/main/default/objects/Opportunity/fields/Product_Lines_Multi__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_Multi__c</fullName>
    <description>Multi-select version of Product Line. Select multiple products for this opportunity. Use this field for quick multi-product tagging in reports and list views.</description>
    <inlineHelpText>Select one or more product lines. Products will be auto-added to the opportunity.</inlineHelpText>
    <label>Product Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AI-Augmented Contracting - In-House Technology</fullName>
            </value>
            <value>
                <fullName>AI-Augmented Contracting - Managed Services</fullName>
            </value>
            <value>
                <fullName>Contracting - Secondee</fullName>
            </value>
            <value>
                <fullName>AI-Augmented Compliance - In-House Technology</fullName>
            </value>
            <value>
                <fullName>AI-Augmented M&amp;A - In-House Technology</fullName>
            </value>
            <value>
                <fullName>AI-Augmented M&amp;A - Managed Service</fullName>
            </value>
            <value>
                <fullName>Sigma</fullName>
            </value>
            <value>
                <fullName>Custom Agents</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Other - Managed Service</fullName>
            </value>
            <value>
                <fullName>Other - Secondee</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>