salesforce/force-app/main/default/objects/Opportunity/fields/Product_Lines_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_Text__c</fullName>
    <description>Text mirror of Product_Lines_Multi__c for report visibility. Auto-populated by Flow when multi-select field is updated.</description>
    <inlineHelpText>Read-only field showing selected product lines. Edit via Product Lines multi-select field.</inlineHelpText>
    <label>Product Lines (Report)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>