salesforce/force-app/main/default/objects/Opportunity/fields/Products_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Products_Breakdown__c</fullName>
    <description>Auto-populated breakdown of products on this opportunity. Updated by Flow when products change. Format: Product Name: $XXK per line.</description>
    <label>Products Breakdown</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>