salesforce/force-app/main/default/objects/Opportunity/fields/Products_Summary__c.field-meta.xml
<CustomField>
    <fullName>Products_Summary__c</fullName>
    <description>Shows total product value for quick reference in Highlights Panel. Shows status when products have been added.</description>
    <formula>IF(
    ISNULL(Amount) || Amount = 0,
    "No products added",
    "Products: $" &amp; TEXT(ROUND(Amount/1000, 0)) &amp; "K"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Summary</label>
    <type>Text</type>
</CustomField>