salesforce/force-app/main/default/objects/Opportunity/fields/Pure_Software_ACV__c.field-meta.xml
<CustomField>
    <fullName>Pure_Software_ACV__c</fullName>
    <description>Returns ACV if Product Bucket is Pure Software, otherwise 0. Use for summing Pure Software revenue in reports.</description>
    <formula>IF(Product_Bucket__c = "Pure Software", ACV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pure Software ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>