salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_ACV_Change_From_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_ACV_Change_From_Snapshot__c</fullName>
    <description>Shows real-time change between current ACV and the original Q1 2026 snapshot. Positive = deal grew, Negative = deal shrunk.</description>
    <formula>IF(
  Q1_2026_ACV_Snapshot__c > 0,
  ACV__c - Q1_2026_ACV_Snapshot__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 2026 ACV Change From Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>