salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_ACV_Change_Pct__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_ACV_Change_Pct__c</fullName>
    <description>Shows percentage change between current ACV and original Q1 2026 snapshot. 100% = doubled, -50% = halved.</description>
    <formula>IF(
  Q1_2026_ACV_Snapshot__c > 0,
  (ACV__c - Q1_2026_ACV_Snapshot__c) / Q1_2026_ACV_Snapshot__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 2026 ACV Change %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>