salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_ACV_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_ACV_Snapshot__c</fullName>
    <description>Locked snapshot of ACV value as of Q1 2026 start. Used to compare against final closed amount.</description>
    <label>Q1 2026 ACV Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>