salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_Commit_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_Commit_Snapshot__c</fullName>
    <description>Locked snapshot of Quarterly Commit (Net New) value as of Q1 2026 start. Used to measure BL forecast accuracy against actual results.</description>
    <label>Q1 2026 Commit Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>