salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_Forecast_Category_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_Forecast_Category_Snapshot__c</fullName>
    <description>Locked snapshot of BL Forecast Category as of Q1 2026 start. Values: Commit, Gut, Pipeline, or blank.</description>
    <label>Q1 2026 Forecast Category Snapshot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>