salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_Open_Pipeline_ACV__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_Open_Pipeline_ACV__c</fullName>
    <description>Returns ACV only for OPEN deals (not closed) with Target Sign Date in Q1 2026. Use alongside Q1 2026 Closed Won ACV for clean separation without double-counting.</description>
    <formula>IF(
  AND(
    NOT(IsClosed),
    Target_LOI_Date__c &gt;= DATE(2026, 2, 1),
    Target_LOI_Date__c &lt;= DATE(2026, 4, 30)
  ),
  ACV__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 2026 Open Pipeline ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>