salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_Owner_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_Owner_Snapshot__c</fullName>
    <description>Locked snapshot of Opportunity Owner name as of Q1 2026 start. Captures who made the commit.</description>
    <label>Q1 2026 Owner Snapshot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>