salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_Snapshot_Date__c</fullName>
    <description>Date when the Q1 2026 forecast snapshot was captured.</description>
    <label>Q1 2026 Snapshot Date</label>
    <type>Date</type>
</CustomField>