salesforce/force-app/main/default/objects/Opportunity/fields/Q1_2026_Stage_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Q1_2026_Stage_Snapshot__c</fullName>
    <description>Locked snapshot of Opportunity Stage as of Q1 2026 start.</description>
    <label>Q1 2026 Stage Snapshot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>